[gd_scene load_steps=2 format=2]

[ext_resource path="res://Button.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 800.0
margin_top = 500.0
margin_right = 883.0
margin_bottom = 520.0
text = "Start Game"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 28.0
margin_top = 23.0
margin_right = 248.0
margin_bottom = 43.0
text = "Target Size - eg: small,large,tiny"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
margin_left = 28.0
margin_top = 323.0
margin_right = 258.0
margin_bottom = 353.0
text = "RGB Color - eg: 000,001,010,011,100,101,110,111"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 28.0
margin_top = 123.0
margin_right = 278.0
margin_bottom = 143.0
text = "Movement Speed - eg: zero,slow,fast"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 28.0
margin_top = 223.0
margin_right = 278.0
margin_bottom = 243.0
text = "Movement Style - eg: straight,sine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 735.0
margin_top = 398.0
margin_right = 985.0
margin_bottom = 418.0
text = "Number of Levels - eg: 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
margin_left = 28.0
margin_top = 423.0
margin_right = 378.0
margin_bottom = 443.0
text = "Shape - eg: sphere,capsule,prism,cube,cylinder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 28.0
margin_top = 63.0
margin_right = 228.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit5" type="LineEdit" parent="."]
margin_left = 28.0
margin_top = 363.0
margin_right = 228.0
margin_bottom = 387.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 28.0
margin_top = 163.0
margin_right = 228.0
margin_bottom = 187.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 28.0
margin_top = 263.0
margin_right = 228.0
margin_bottom = 287.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit4" type="LineEdit" parent="."]
margin_left = 28.0
margin_top = 463.0
margin_right = 228.0
margin_bottom = 487.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel8" type="RichTextLabel" parent="."]
margin_left = 368.0
margin_top = 23.0
margin_right = 668.0
margin_bottom = 43.0
text = "Obstacle Size - eg: zero,small,large,tiny"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel9" type="RichTextLabel" parent="."]
margin_left = 368.0
margin_top = 323.0
margin_right = 598.0
margin_bottom = 353.0
text = "Obstacle Color - eg: 000,001...."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel10" type="RichTextLabel" parent="."]
margin_left = 368.0
margin_top = 123.0
margin_right = 618.0
margin_bottom = 143.0
text = "Obstacle Speed - eg: zero,slow,fast"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel11" type="RichTextLabel" parent="."]
margin_left = 368.0
margin_top = 223.0
margin_right = 618.0
margin_bottom = 243.0
text = "Obstacle Style - eg: straight,sine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel12" type="RichTextLabel" parent="."]
margin_left = 368.0
margin_top = 423.0
margin_right = 718.0
margin_bottom = 443.0
text = "Obs. Shape - eg: sphere,capsule,prism,cube,cylinder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit6" type="LineEdit" parent="."]
margin_left = 368.0
margin_top = 63.0
margin_right = 568.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit7" type="LineEdit" parent="."]
margin_left = 368.0
margin_top = 363.0
margin_right = 568.0
margin_bottom = 387.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit8" type="LineEdit" parent="."]
margin_left = 368.0
margin_top = 163.0
margin_right = 568.0
margin_bottom = 187.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit9" type="LineEdit" parent="."]
margin_left = 368.0
margin_top = 263.0
margin_right = 568.0
margin_bottom = 287.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel13" type="RichTextLabel" parent="."]
margin_left = 28.0
margin_top = 518.0
margin_right = 278.0
margin_bottom = 538.0
text = "Movement Orientation - eg: x,y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit11" type="LineEdit" parent="."]
margin_left = 28.0
margin_top = 558.0
margin_right = 228.0
margin_bottom = 582.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel14" type="RichTextLabel" parent="."]
margin_left = 368.0
margin_top = 518.0
margin_right = 618.0
margin_bottom = 538.0
text = "Obs. Movement Orientation - eg: x,y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit12" type="LineEdit" parent="."]
margin_left = 368.0
margin_top = 558.0
margin_right = 568.0
margin_bottom = 582.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit10" type="LineEdit" parent="."]
margin_left = 368.0
margin_top = 463.0
margin_right = 568.0
margin_bottom = 487.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 775.0
margin_top = 438.0
margin_right = 975.0
margin_bottom = 462.0
min_value = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
margin_left = 777.0
margin_top = 40.0
margin_right = 977.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
